added project section, devicons
added new devicons, updated project section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Fahkwang|Merriweather:400,700|Nanum+Gothic|Nunito|Poppins:400,500,600|Quicksand:400,500,700|Ubuntu" rel="stylesheet">
   <link href="style.css" rel="stylesheet"/>
- <link rel="icon" type="image/png" href="img/favicon.png"
+ <link rel="icon" type="image/png" href="img/logo/favicon.png">
+ <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
 </head>
 
@@ -25,15 +26,15 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#"><img src="img/logosq.png"></a>
+					<a class="navbar-brand" href="#"><img src="img/logo/logosq.png"></a>
 				</div>
 				<div id="navbarCollapse"class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#">About</a></li>
-						<li><a href="#">Projects</a></li>
-						<li><a href="#">Skills</a></li>
-						<li><a href="#">Contact</a></li>
-						<a href="#" target="_blank"><button type="button" class="resume">Resume</button></a>
+						<li><a href="#about">About</a></li>
+						<li><a href="#projects">Projects</a></li>
+						<li><a href="#skills">Skills</a></li>
+						<li><a href="#contact">Contact</a></li>
+						<a href="https://drive.google.com/open?id=1uFIqg-0_s_cw14MV4602ac-7Yv3wg8Wd" target="_blank"><button type="button" class="resume">Resume</button></a>
 
 					</ul>
 				</div>
@@ -52,20 +53,22 @@
 
 <!------- About Me ------->
 
-		<div class="padding">
+		<div class="padding" id="about">
 			<div class="container">
 				<div class="row">
 					<div class="about col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
 					  <h2>About Me</h2>
 					</div>
-					<div class="col-lg-3 col-md-4 col-sm-5 col-xs-12 class="text-center">
+					<div class="col-lg-3 col-md-4 col-sm-5 col-xs-12 text-center">
 						<img class="about-pic" src="img/mypic.gif" class="img-responsive img-fluid">
 					</div>
 					<div class="col-lg-9 col-md-8 col-sm-7 col-xs-12 text-center">
 						<p><strong>Hi, I'm Tenzin</strong>, a Frontend web developer based in <strong>NYC</strong>. I enjoy everything from building websites from scratch to deployment, and I love building beautiful and responsive websites. I graduated from NYC College of Technology with Bachelor in Computer Science and during my semester, I took Web Development course and since then, I fell in love with it... </p> 
 
-						<p>One of the best thing i find about Web Development is that you get to bring new ideas into a real life projects with fully functional live web sites, which is amazing! My goal is to create website contents that will satisfy viewers and customers with the information provided in a clean, beautiful and easy to navigate. I hope that the websites i will be able to work on can catch the attention of the world.</p>
-						<p>When i am not coding, I like playing video games, basketball or snowboarding upstate in the mountains during winter.</p>
+						<p>One of the best thing I find about Web Development is that you get to bring new ideas into a real life projects with fully functional live web sites, which is amazing! My goal is to create website contents that will satisfy viewers and customers with the information provided in a clean, beautiful and easy to navigate. I hope that the websites I will be able to work on can catch the attention of the world.</p>
+						<p>When I'm not coding, you'll find me playing video games, basketball or snowboarding upstate in the mountains during winter season.</p>
+						<p>If you are a business seeking a web presence or an employer looking to hire, you can <a href="#contact">get in touch</a> with me.</p>		
+
 					</div>
 				</div>
 			</div>
@@ -76,21 +79,22 @@
 
 <!------- Projects ------->
 
-		<div class="padding">
+		<div class="padding" id="projects">
 			<div class="container">
 				<div class="row">
 					<div class="projects col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
 					  <h2>Projects</h2>
 					</div>
 					<div class="col-lg-6 col-md-4 col-sm-12 col-xs-12">
-					  <img src="img/laketahoe-proj.png" class"img-responsive">
+					  <img src="img/laketahoe-proj.png" class="img-responsive img-shadow" alt="lake tahoe visitor page">
 					</div>
 					<div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
-					  	<h3>Lake Tahoe page</h3>
+					  	<h3 class="padding-proj">Lake Tahoe</h3>
 					  	<h4>Description:</h4>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+						<p>"Lake Tahoe" is a information site for visitors or local campers who are planning to visit Lake Tahoe in California. One of the extremely popular destination year round. You'll find information about outdoor activities from hiking to winter skiing activities and packing guide.</p>
 						<h4>Techs:</h4>
-						<p>HTML5, CSS3, JavaScript, Responsive Design</p>
+						<p>HTML 5, CSS 3, JavaScript, Responsive Design</p>
+						<p>Check out the source code on <a href="https://github.com/tenzinthayai/Laketahoe-site" target="_blank">Github</a></p>
 					</div>
 				</div>
 			</div>
@@ -99,14 +103,15 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6 col-md-4 col-sm-12 col-xs-12">
-					  <img src="img/laketahoe-proj.png" class"img-responsive">
+					  <img src="img/vrexp-proj.png" class="img-responsive img-shadow" alt="Virtual reality experience page">
 					</div>
 					<div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
-					  	<h3>VR Experience page</h3>
+					  	<h3 class="padding-proj">VR Experience</h3>
 					  	<h4>Description:</h4>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+						<p>"VR Exprience" is a great site for people who wants to know more about VR technologies and technologies in general. Ways of using VR technologies to help others and articles about schoools teachers using these techs to teach students in a different way.</p>
 						<h4>Techs:</h4>
-						<p>HTML5, CSS3, JavaScript, Responsive Design</p>
+						<p>HTML 5, CSS 3, Responsive Design</p>
+						<p>Check out the source code on <a href="https://github.com/tenzinthayai/tenzinVR.github.io" target="_blank">Github</a></p>
 					</div>
 				</div>
 			</div>
@@ -115,67 +120,99 @@
 
 <!------- Skills------->
 
-			<div class="padding">
+			<div class="padding" id="skills">
 				<div class="container">
 					<div class="row">
 						<div class="skills col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
 					  		<h2>Skills</h2>
 						</div>
-						<div class="col-sm-3 col-xs-12 text-center">
-							<h4>HTML 5</h4>
+						<div class="col-sm-3 col-xs-4 text-center devicon">
+							<i class="devicon-html5-plain-wordmark colored"></i>
 						</div>
-						<div class="col-sm-3 col-xs-12 text-center">
-							<h4>CSS 3</h4>
+						<div class="col-sm-3 col-xs-4 text-center devicon">
+							<i class="devicon-css3-plain-wordmark colored"></i>
 						</div>
-						<div class="col-sm-3 col-xs-12 text-center">
-							<h4>JAVASCRIPT</h4>
+						<div class="col-sm-3 col-xs-4 text-center devicon">
+							<i class="devicon-javascript-plain colored"></i>
 						</div>
-						<div class="col-sm-3 col-xs-12 text-center">
-							<h4>BOOTSTRAP</h4>
+						<div class="col-sm-3 col-xs-4 text-center devicon">
+							<i class="devicon-bootstrap-plain-wordmark colored"></i>
 						</div>
-						<div class="col-sm-6 col-xs-12 text-center">
-							<h4>RESPONSIVE DESIGN</h4>
+						<div class="col-sm-4 col-xs-4 text-center devicon">
+							<i class="devicon-wordpress-plain colored"></i>
 						</div>
-						<div class="col-sm-6 col-xs-12 text-center">
-							<h4>GIT & GITHUB</h4>
+						<div class="col-sm-4 col-xs-4 text-center devicon">
+							<i class="devicon-github-plain-wordmark colored"></i>
+						</div>
+						<div class="col-sm-4 col-xs-12 text-center devicon">
+							<img src="img/logo/responsive-design-logo.png" class="skills-icon" alt="responsive web design">
 						</div>
 					</div>
 				</div>
 			</div>
 		
 <!------- Footer ------->
+			<div class="padding-footer" id="contact">
+				<footer class="container-fluid text-center">
+					<div class="footer-text" class="row">
+						<div class="col-sm-4">
+							<h3>Contact Me</h3>
+							<h5>Say Hi! Whether you have a work enquiry or simply want to find out more, let’s talk. Coffee's on me!</h5>
+							<a href="mailto:tenzinthayai@gmail.com" class="fa fa-envelope"></a>
+						</div>
+						<div class="col-sm-4 col-xs-6 footer-logo">
+							<img class="footer-logo" src="img/logo/logosq.png">
+							<h5>Tenzin Thayai &copy; 2018</h5>
+						</div>
+						<div class="col-sm-4 col-xs-6">
+							<h3>Let's Connect!</h3>
+							<a href="#" class="fa fa-facebook"></a>
+							<a href="https://www.instagram.com/thayazz/" target="_blank" class="fa fa-instagram"></a>
+							<a href="https://www.linkedin.com/in/tenzin-thayai/" target="_blank" class="fa fa-linkedin"></a>
+							<a href="https://github.com/tenzinthayai" target="_blank" class="fa fa-github"></a>
+						</div>
+					</div>
 
-		<footer class="container-fluid text-center">
-			<div class="row">
-				<div class="col-sm-4">
-					<h3>Contact Me</h3>
-					<h4>Say Hi! Whether you have a work enquiry or simply want to find out more, let’s talk. Coffee's on me.</h4>
-					<a href="mailto:tenzinthayai@gmail.com" class="fa fa-envelope"></a>
-				</div>
-				<div class="col-sm-4 col-xs-6 footer-logo">
-					<img class="footer-logo" src="img/logosq.png">
-					<h4>Tenzin Thayai &copy; 2018</h4>
-				</div>
-				<div class="col-sm-4 col-xs-6">
-					<h3>Let's Connect!</h3>
-					<a href="#" class="fa fa-facebook"></a>
-					<a href="https://www.instagram.com/thayazz/" target="_blank" class="fa fa-instagram"></a>
-					<a href="https://www.linkedin.com/in/tenzin-thayai/" target="_blank" class="fa fa-linkedin"></a>
-					<a href="https://github.com/tenzinthayai" target="_blank" class="fa fa-github"></a>
-				</div>
+				</footer>
 			</div>
-
-		</footer>
-
 <!------- JS ------->		
 
 		<script>$(function(){ 
-     var navMain = $(".navbar-collapse");
+		     var navMain = $(".navbar-collapse");
 
-     navMain.on("click", "a", null, function () {
-         navMain.collapse('hide');
-     });
- </script>
+		     navMain.on("click", "a", null, function () {
+		         navMain.collapse('hide');
+		     });
+		     });
+ 		</script>
+ 		<!-- JQuery lib -->
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+			<!-- smooth scrolling -->
+			<script> 
+				$(document).ready(function(){
+				  // Add smooth scrolling to all links
+				  $("a").on('click', function(event) {
+
+				    // Make sure this.hash has a value before overriding default behavior
+				    if (this.hash !== "") {
+				      // Prevent default anchor click behavior
+				      event.preventDefault();
+
+				      // Store hash
+				      var hash = this.hash;
+
+				      // Using jQuery's animate() method to add smooth page scroll
+				      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+				      $('html, body').animate({
+				        scrollTop: $(hash).offset().top}, 800, function(){
+				   
+				        // Add hash (#) to URL when done scrolling (default click behavior)
+				        window.location.hash = hash;
+				      });
+				    } // End if
+				  });
+				});
+			</script>
 	</body>
 </html>
 
