--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6 col-md-4 col-sm-12 col-xs-12">
-					  <img src="img/vrexp-proj.png" class="img-responsive img-shadow" alt="Virtual reality experience page">
+					  <img src="img/vrexp-proj.PNG" class="img-responsive img-shadow" alt="Virtual reality experience page">
 					</div>
 					<div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
 					  	<h3 class="padding-proj">VR Experience</h3>
@@ -157,12 +157,12 @@
 					<div class="footer-text" class="row">
 						<div class="col-sm-4">
 							<h3>Contact Me</h3>
-							<h5>Say Hi! Whether you have a work enquiry or simply want to find out more, let’s talk. Coffee's on me!</h5>
+							<h4>Say Hi! Whether you have a work enquiry or simply want to find out more, let’s talk. Coffee's on me!</h4>
 							<a href="mailto:tenzinthayai@gmail.com" class="fa fa-envelope"></a>
 						</div>
 						<div class="col-sm-4 col-xs-6 footer-logo">
 							<img class="footer-logo" src="img/logo/logosq.png">
-							<h5>Tenzin Thayai &copy; 2018</h5>
+							<h4>Tenzin Thayai &copy; 2018</h4>
 						</div>
 						<div class="col-sm-4 col-xs-6">
 							<h3>Let's Connect!</h3>
