--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6 col-md-4 col-sm-12 col-xs-12">
-					  <img src="img/vrexp-proj.png" class="img-responsive img-shadow" alt="Virtual reality experience page">
+					  <img src="img/vrexp.png" class="img-responsive img-shadow" alt="Virtual reality experience page">
 					</div>
 					<div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
 					  	<h3 class="padding-proj">VR Experience</h3>
