--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6 col-md-4 col-sm-12 col-xs-12">
-					  <img src="img/vrexp.png" class="img-responsive img-shadow" alt="Virtual reality experience page">
+					  <img src="img/vrexp.png" class="img-responsive img-shadow">
 					</div>
 					<div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
 					  	<h3 class="padding-proj">VR Experience</h3>
 					  	<h4>Description:</h4>
-						<p>"VR Exprience" is a great site for people who wants to know more about VR technologies and technologies in general. Ways of using VR technologies to help others and articles about schoools teachers using these techs to teach students in a different way.</p>
+						<p>"VR Exprience" is a great site for people who wants to know more about VR technologies and technologies in general. Ways of using VR technologies to help others and articles about school's teachers using these techs to improve teaching methods in the classroom.</p>
 						<h4>Techs:</h4>
 						<p>HTML 5, CSS 3, Responsive Design</p>
 						<p>Check out the source code on <a href="https://github.com/tenzinthayai/tenzinVR.github.io" target="_blank">Github</a></p>
