updated fb link

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 						</div>
 						<div class="col-sm-4 col-xs-6">
 							<h3>Let's Connect!</h3>
-							<a href="#" class="fa fa-facebook"></a>
+							<a href="https://www.facebook.com/thayai" target="_blank"class="fa fa-facebook"></a>
 							<a href="https://www.instagram.com/thayazz/" target="_blank" class="fa fa-instagram"></a>
 							<a href="https://www.linkedin.com/in/tenzin-thayai/" target="_blank" class="fa fa-linkedin"></a>
 							<a href="https://github.com/tenzinthayai" target="_blank" class="fa fa-github"></a>
