updated footer and devicon

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					<div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
 					  	<h3 class="padding-proj">VR Experience</h3>
 					  	<h4>Description:</h4>
-						<p>"VR Exprience" is a great site for people who wants to know more about VR technologies and technologies in general. Ways of using VR technologies to help others and articles about school's teachers using these techs to improve teaching methods in the classroom.</p>
+						<p>"VR Exprience" is a simple blog site for people who wants to know more about VR technologies and technologies in general. Ways of using VR technologies to help others and articles about school's teachers using these techs to improve teaching methods in the classroom.</p>
 						<h4>Techs:</h4>
 						<p>HTML 5, CSS 3, Responsive Design</p>
 						<p>Check out the source code on <a href="https://github.com/tenzinthayai/tenzinVR.github.io" target="_blank">Github</a></p>
@@ -150,8 +150,9 @@
 					</div>
 				</div>
 			</div>
-		
+
 <!------- Footer ------->
+
 			<div class="padding-footer" id="contact">
 				<footer class="container-fluid text-center">
 					<div class="footer-text" class="row">
@@ -175,6 +176,7 @@
 
 				</footer>
 			</div>
+
 <!------- JS ------->		
 
 		<script>$(function(){ 
