--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 						<div class="col-sm-4">
 							<h3>Contact Me</h3>
 							<h4>Say Hi! Whether you have a work enquiry or simply want to find out more, let’s talk. Coffee's on me!</h4>
-							<a href="mailto:tenzinthayai@gmail.com" class="fa fa-envelope"></a>
+							<a href="mailto:tenzinthayai@gmail.com" class="fa fa-envelope-o"></a>
 						</div>
 						<div class="col-sm-4 col-xs-6 footer-logo">
 							<img class="footer-logo" src="img/logo/logosq.png">
@@ -167,9 +167,9 @@
 						</div>
 						<div class="col-sm-4 col-xs-6">
 							<h3>Let's Connect!</h3>
-							<a href="https://www.facebook.com/thayai" target="_blank"class="fa fa-facebook"></a>
+							<a href="https://www.facebook.com/thayai" target="_blank"class="fa fa-facebook-official"></a>
 							<a href="https://www.instagram.com/thayazz/" target="_blank" class="fa fa-instagram"></a>
-							<a href="https://www.linkedin.com/in/tenzin-thayai/" target="_blank" class="fa fa-linkedin"></a>
+							<a href="https://www.linkedin.com/in/tenzin-thayai/" target="_blank" class="fa fa-linkedin-square"></a>
 							<a href="https://github.com/tenzinthayai" target="_blank" class="fa fa-github"></a>
 						</div>
 					</div>
