--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
 						<h4>Techs:</h4>
 						<p>HTML 5, CSS 3, JavaScript, Responsive Design</p>
 						<p>Check out the source code on <a href="https://github.com/tenzinthayai/Laketahoe-site" target="_blank">Github</a></p>
+						<a href="https://github.com/tenzinthayai/Laketahoe-site" target="_blank" class="fa fa-github"></a>
+						<a href="https://visit-laketahoe.netlify.com/" target="_blank" class="fa fa-link"></a>
 					</div>
 				</div>
 			</div>
@@ -112,6 +114,8 @@
 						<h4>Techs:</h4>
 						<p>HTML 5, CSS 3, Responsive Design</p>
 						<p>Check out the source code on <a href="https://github.com/tenzinthayai/tenzinVR.github.io" target="_blank">Github</a></p>
+						<a href="https://github.com/tenzinthayai/tenzinVR.github.io" target="_blank" class="fa fa-github"></a>
+						<a href="https://vr-experience.netlify.com/" target="_blank" class="fa fa-link"></a>
 					</div>
 				</div>
 			</div>
@@ -167,7 +171,7 @@
 						</div>
 						<div class="col-sm-4 col-xs-6">
 							<h3>Let's Connect!</h3>
-							<a href="https://www.facebook.com/thayai" target="_blank"class="fa fa-facebook-official"></a>
+							<a href="https://www.facebook.com/thayai" target="_blank" class="fa fa-facebook"></a>
 							<a href="https://www.instagram.com/thayazz/" target="_blank" class="fa fa-instagram"></a>
 							<a href="https://www.linkedin.com/in/tenzin-thayai/" target="_blank" class="fa fa-linkedin-square"></a>
 							<a href="https://github.com/tenzinthayai" target="_blank" class="fa fa-github"></a>
