updated footer text

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 					<div class="footer-text" class="row">
 						<div class="col-sm-4">
 							<h3>Contact Me</h3>
-							<h4>Say Hi! Whether you have a work enquiry or simply want to find out more, let’s talk. Coffee's on me!</h4>
+							<h4>Say Hi! Whether you have a work enquiry or simply want to find out more, let's talk. Coffee's on me!</h4>
 							<a href="mailto:tenzinthayai@gmail.com" class="fa fa-envelope-o"></a>
 						</div>
 						<div class="col-sm-4 col-xs-6 footer-logo">
