removed left paddings from proj-links

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						<h4>Techs:</h4>
 						<p>HTML 5, CSS 3, JavaScript, Responsive Design</p>
 						<p>Check out the source code on <a href="https://github.com/tenzinthayai/Laketahoe-site" target="_blank">Github</a></p>
-						<a href="https://github.com/tenzinthayai/Laketahoe-site" target="_blank" class="fa fa-github" style="color:black;"></a>
+						<a href="https://github.com/tenzinthayai/Laketahoe-site" target="_blank" class="fa fa-github" style="color:black;padding-left: 0;"></a>
 						<a href="https://visit-laketahoe.netlify.com/" target="_blank" class="fa fa-link" style="color:#1773cf;"></a>
 					</div>
 				</div>
@@ -114,7 +114,7 @@
 						<h4>Techs:</h4>
 						<p>HTML 5, CSS 3, Responsive Design</p>
 						<p>Check out the source code on <a href="https://github.com/tenzinthayai/tenzinVR.github.io" target="_blank">Github</a></p>
-						<a href="https://github.com/tenzinthayai/tenzinVR.github.io" target="_blank" class="fa fa-github" style="color:black;"></a>
+						<a href="https://github.com/tenzinthayai/tenzinVR.github.io" target="_blank" class="fa fa-github" style="color:black;padding-left: 0;"></a>
 						<a href="https://vr-experience.netlify.com/" target="_blank" class="fa fa-link" style="color:#1773cf;"></a>
 					</div>
 				</div>
