--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<p><strong>Hi, I'm Tenzin</strong>, a Frontend web developer based in <strong>NYC</strong>. I enjoy everything from building websites from scratch to deployment, and I love building beautiful and responsive websites. I graduated from NYC College of Technology with Bachelor in Computer Science and during my semester, I took Web Development course and since then, I fell in love with it... </p> 
 
 						<p>One of the best thing I find about Web Development is that you get to bring new ideas into a real life projects with fully functional live web sites, which is amazing! My goal is to create website contents that will satisfy viewers and customers with the information provided in a clean, beautiful and easy to navigate. I hope that the websites I will be able to work on can catch the attention of the world.</p>
-						<p>When I'm not coding, you'll find me playing video games, basketball or snowboarding upstate in the mountains during winter season.</p>
+						<p>When I'm not coding, you'll find me playing basketball, cooking or snowboarding upstate in the mountains during winter season.</p>
 						<p>If you are a business seeking a web presence or an employer looking to hire, you can <a href="#contact">get in touch</a> with me.</p>		
 
 					</div>
