added new project to site

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<p><strong>Hi, I'm Tenzin</strong>, a Frontend web developer based in <strong>NYC</strong>. I enjoy everything from building websites from scratch to deployment, and I love building beautiful and responsive websites. I graduated from NYC College of Technology with Bachelor in Computer Science and during my semester, I took Web Development course and since then, I fell in love with it... </p> 
 
 						<p>One of the best thing I find about Web Development is that you get to bring new ideas into a real life projects with fully functional live web sites, which is amazing! My goal is to create website contents that will satisfy viewers and customers with the information provided in a clean, beautiful and easy to navigate. I hope that the websites I will be able to work on can catch the attention of the world.</p>
-						<p>When I'm not coding, you'll find me playing basketball, cooking or snowboarding upstate in the mountains during winter season.</p>
+						<p>When I'm not coding, you'll find me cooking, playing basketball or snowboarding upstate in the mountains during winter season.</p>
 						<p>If you are a business seeking a web presence or an employer looking to hire, you can <a href="#contact">get in touch</a> with me.</p>		
 
 					</div>
@@ -85,6 +85,25 @@
 					<div class="projects col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
 					  <h2>Projects</h2>
 					</div>
+					<div class="col-lg-6 col-md-4 col-sm-12 col-xs-12">
+					  <img src="img/random-quote.png" class="img-responsive img-shadow" alt="lake tahoe visitor page">
+					</div>
+					<div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
+					  	<h3 class="padding-proj">Random Quote Generator</h3>
+					  	<h4>Description:</h4>
+						<p>Random Quote Generator app does just like it sounds. When a user clicks on the button, a random quote will be generated. I used DOM, arrays, functions, objects and other methods in this project.</p>
+						<h4>Techs:</h4>
+						<p>HTML 5, CSS 3, JavaScript, Flexbox, DOM, Responsive Design</p>
+						<p>Check out the source code on <a href="https://github.com/tenzinthayai/Random-Quote-Generator" target="_blank">Github</a></p>
+						<a href="https://github.com/tenzinthayai/Random-Quote-Generator" target="_blank" class="fa fa-github" style="color:black;padding-left: 0;"></a>
+						<a href="https://random-quote-gen.netlify.com/" target="_blank" class="fa fa-link" style="color:#1773cf;"></a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="padding">
+			<div class="container">
+				<div class="row">
 					<div class="col-lg-6 col-md-4 col-sm-12 col-xs-12">
 					  <img src="img/laketahoe-proj.png" class="img-responsive img-shadow" alt="lake tahoe visitor page">
 					</div>
