--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					  <h2>Projects</h2>
 					</div>
 					<div class="col-lg-6 col-md-4 col-sm-12 col-xs-12">
-					  <img src="img/random-quote.png" class="img-responsive img-shadow" alt="lake tahoe visitor page">
+					  <img src="img/random-quote.jpeg" class="img-responsive img-shadow" alt="Random Quote Generator">
 					</div>
 					<div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
 					  	<h3 class="padding-proj">Random Quote Generator</h3>
