--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			
 		</div>
 
-		<div class=" t-border"></div>
+		<div class="t-border"></div>
 
 <!------- Projects ------->
 
@@ -86,7 +86,7 @@
 					  <h2>Projects</h2>
 					</div>
 					<div class="col-lg-6 col-md-4 col-sm-12 col-xs-12">
-					  <img src="img/random-quote.jpg" class="img-responsive img-shadow" alt="Random Quote Generator">
+					  <img src="img/random-quote.png" class="img-responsive img-shadow img-rounded" alt="lake tahoe visitor page">
 					</div>
 					<div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
 					  	<h3 class="padding-proj">Random Quote Generator</h3>
@@ -105,7 +105,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6 col-md-4 col-sm-12 col-xs-12">
-					  <img src="img/laketahoe-proj.png" class="img-responsive img-shadow" alt="lake tahoe visitor page">
+					  <img src="img/laketahoe-proj.png" class="img-responsive img-shadow img-rounded" alt="lake tahoe visitor page">
 					</div>
 					<div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
 					  	<h3 class="padding-proj">Lake Tahoe</h3>
@@ -124,7 +124,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6 col-md-4 col-sm-12 col-xs-12">
-					  <img src="img/vrexp.png" class="img-responsive img-shadow">
+					  <img src="img/vrexp.png" class="img-responsive img-shadow img-rounded">
 					</div>
 					<div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
 					  	<h3 class="padding-proj">VR Experience</h3>
