--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
 		<div class="padding">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-6 col-md-4 col-sm-12 col-xs-12">
+					<div class="col-lg-6 col-lg-push-6 col-md-4 col-sm-12 col-xs-12">
 					  <img src="img/laketahoe-proj.png" class="img-responsive img-shadow img-rounded" alt="lake tahoe visitor page">
 					</div>
-					<div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
+					<div class="col-lg-6 col-lg-pull-6 col-md-8 col-sm-12 col-xs-12">
 					  	<h3 class="padding-proj">Lake Tahoe</h3>
 					  	<h4>Description:</h4>
 						<p>"Lake Tahoe" is a information site for visitors or local campers who are planning to visit Lake Tahoe in California. One of the extremely popular destination year round. You'll find information about outdoor activities from hiking to winter skiing activities and packing guide.</p>
