--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="padding-proj1">
+	<!-- 	<div class="padding-proj1"> -->
 		<div class=" t-border"> </div>
 
 <!------- Skills------->
