--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="padding-proj1">
+		<div class="padding-top-bottom">
 			<div class="container">
 				<div class="row">
 					<div class="proj-imgs col-lg-6 col-lg-push-6 col-md-4 col-sm-12 col-xs-12">
@@ -118,7 +118,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="padding-proj1">
+		<div class="padding-top-bottom">
 			<div class="container">
 				<div class="row">
 					<div class="proj-imgs col-lg-6 col-md-4 col-sm-12 col-xs-12">
@@ -136,7 +136,7 @@
 				</div>
 			</div>
 		</div>
-	<!-- 	<div class="padding-proj1"> -->
+		<div class="padding-proj1"></div>
 		<div class=" t-border"> </div>
 
 <!------- Skills------->
